增加了宠物的控制
上下左右和小键盘1

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Assets\Scripts\AI\EnemyCtrl.cs" />
     <Compile Include="Assets\Scripts\AI\EnemyTest.cs" />
     <Compile Include="Assets\Scripts\AI\FriendCtrl.cs" />
+    <Compile Include="Assets\Scripts\AI\FriendPlayerCtrl.cs" />
     <Compile Include="Assets\Scripts\AI\PlayerCtrl.cs" />
     <Compile Include="Assets\Scripts\AI\PlayerManager.cs" />
     <Compile Include="Assets\Scripts\Animator\BallAnimator.cs" />
